change 3sum name

--- a/part_one/Cargo.toml
+++ b/part_one/Cargo.toml
@@ -19,5 +19,5 @@ path = "src/examples/percolation.rs"
 # crate-type = ["staticlib"]
 
 [[example]]
-name = "3sum"
+name = "threesum"
 path = "src/examples/3sum.rs"
