--- a/advanced/Cargo.toml
+++ b/advanced/Cargo.toml
@@ -1,13 +1,4 @@
 [package]
-name = "advanced-algo-and-struct"
+name = "algods"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-
-
-[lib]
-name = "advanced"
-path = "src/lib.rs"
